cdebconf (0.88) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Remove hardcoded limit on length of DATA commands.

  [ Attilio Fiandrotti ]
  * Added a new handler for SELECT question that are better displayed by
    a tree rather than a list. Added a nice logo. Closes: #322376.
  * Some changes to GTK frontend aspect to make it more NEWT-like and
    many improvements to usability too.

  [ Frans Pop ]
  * Unset seen flag in cdebconf-priority postinst to make the dialog
    show up when priority was set from boot parameters (closes: #331677).
  * Build GTK frontend against directfb instead of X.
  * Add myself to uploaders.

 -- Frans Pop <fjp@debian.org>  Fri, 28 Oct 2005 17:44:01 +0200

cdebconf (0.87) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Until bug #322460 and #322464 are solved the main-menu hack is disabled
    by default.
  * A lot of modifications to make the frontend GNOME HIG 2.0 compliant.

  [ Colin Watson ]
  * Fix slightly broken memory allocation in escapestr(); we need to
    allocate an extra byte for every newline in the string.
  * Update some obsolete function names in comments.

  * Updated translations:
    - Spanish (es.po) by Javier Fernández-Sanguino Peña

 -- Colin Watson <cjwatson@debian.org>  Fri, 23 Sep 2005 15:23:24 +0100

cdebconf (0.86) unstable; urgency=low

  * If a template name ending in -C is requested (e.g. via METAGET), return
    the untranslated template regardless of the locale.

  * Updated translations:
    - Czech (cs.po) by Miroslav Kure
    - Italian (it.po) by Giuseppe Sacco
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Slovak (sk.po) by Peter Mann

 -- Colin Watson <cjwatson@debian.org>  Wed, 21 Sep 2005 19:09:04 +0100

cdebconf (0.85) unstable; urgency=low

  [ Colin Watson ]
  * Initialise all fields of the gtk frontend data. Should fix several
    crashes.