@@ -8,6 +8,12 @@ cdebconf (0.88) UNRELEASED; urgency=low
     a tree rather than a list. Added a nice logo. Closes: #322376.
   * Some changes to GTK frontend aspect to make it more NEWT-like and
     many improvements to usability too.
+  * Added a new handler for single MULTISELECT questions to GTK frontend.
+    Added also icons to NOTE and TEXT questions and introduced an hack
+    that makes partman's main screen look like a tree of drives and
+    partitions.
+    Swapped text inside progressbar and text beow it to make fast messages
+    more readable.
 
   [ Frans Pop ]
   * Unset seen flag in cdebconf-priority postinst to make the dialog
@@ -15,7 +21,10 @@ cdebconf (0.88) UNRELEASED; urgency=low
   * Build GTK frontend against directfb instead of X.
   * Add myself to uploaders.
 
- -- Frans Pop <fjp@debian.org>  Fri, 28 Oct 2005 17:44:01 +0200
+  [ attilio ]
+  * 
+
+ -- attilio <attilio@localhost.localdomain>  Thu,  3 Nov 2005 13:02:55 +0100
 
 cdebconf (0.87) unstable; urgency=low
 
